Changelog
=========

1.0.3 (unreleased)
------------------

- Code cleanup (pep8/pylint)
  [mathias.leimgruber]


1.0.2 (2012-04-23)
------------------

- Set delay to 0 by default.
  [mathias.leimgruber]

- Trigger mousover event to activate the tooltip, otherwise
  some tooltip configurations will not work (ex. predelay)
  [mathias.leimgruber]


1.0.1 (2012-03-26)
------------------

- Hide default tooltip from browser.
  [mathias.leimgruber]


1.0 (2012-03-19)
----------------

- Init release
  [mathias.leimgruber]