@@ -4,6 +4,9 @@ Changelog
 1.0.3 (unreleased)
 ------------------
 
+- Use new test buildout config.
+  [mathias.leimgruber]
+
 - Code cleanup (pep8/pylint)
   [mathias.leimgruber]
 
